--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,41 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.navbar {
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
+.Banner {
+  background-image: url(./assets/bannar.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  height: 50px;
+  width: auto;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer h5 {
+  color: rgb(6, 121, 121);
+  margin-bottom: 20px;
+  font-weight: 700;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.quick-links ul {
+  list-style-type: none;
+  padding: 0;
+  margin-bottom: 10px;
 }
 
-.card {
-  padding: 2em;
+.quick-links ul a {
+  text-decoration: none;
+  color: inherit;
+  font-weight: normal;
 }
 
-.read-the-docs {
-  color: #888;
+.quick-links ul a:hover {
+  color: rgb(6, 121, 121);
+}
+
+.get-in-touch ul {
+  list-style-type: none;
+  padding: 0;
 }
