--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,20 @@
-.navbar {
-  background-color: rgba(0, 0, 0, 0.7);
+/* bg dark and light */
+.bg-color1 {
+  background-color: #222;
 }
 
+.bg-color2 {
+  background-color: #57687a;
+}
+
+/* navbar */
 .logo {
   height: 50px;
   width: auto;
 }
 
+/* footer */
 footer h5 {
-  color: rgb(6, 121, 121);
   margin-bottom: 20px;
   font-weight: 700;
 }
@@ -33,7 +39,7 @@ footer h5 {
   list-style-type: none;
   padding: 0;
 }
-
+/* testimonials */
 .testimonial-container {
   width: 85%;
   margin: auto;
@@ -42,7 +48,6 @@ footer h5 {
   border-radius: 10px;
 }
 
-/* testimonials */
 .testimonial-slide {
   display: flex;
   justify-content: center;
